--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css?v=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Fascinate+Inline&display=swap" rel="stylesheet">
   </head>
   <body>
     <header class="header">
       <h1>Travel Journal</h1>
     </header>
     <main class="gallery">
-      <article class="city toronto">
+      <article class="city-toronto">
         <h2 class="city-name"><a href="#">Toronto</a></h2>
         <img src="/img/toronto.jpeg" alt="Toronto" class="city-photo">
       </article>
-      <article class="city helsinki">
+      <article class="city-helsinki">
         <h2 class="city-name"><a href="#">Helsinki</a></h2>
         <img src="/img/helsinki.jpeg" alt="Helsinki" class="city-photo">
       </article>
-      <article class="city osaka">
+      <article class="city-osaka">
         <h2 class="city-name"><a href="#">Osaka</a></h2>
         <img src="/img/osaka.jpeg" alt="Osaka" class="city-photo">
       </article>
-      <article class="city lagos">
+      <article class="city-lagos">
         <h2 class="city-name"><a href="#">Lagos</a></h2>
         <img src="/img/lagos.jpeg" alt="Lagos" class="city-photo">
       </article>
